@@ -1,6 +1,7 @@
 Release 1.1-SNAPSHOT
 * Added \diff command to compare results from SQL executed across 
   multiple session.
+* Tab completion now recognizes the TSQL "use" statement.
   
 Release 1.0
 * Tab completion now recognizes stored procedure execution requests and
